Changes since 0.3:

When adding a foreign key without giving it a name, Mayfly now assigns
a name using the same scheme as MySQL: referringTable_ibfk_sequence,
where the first foreign key in this table is sequence 1, the second is 2, 
and so on.  This can be kind of ugly in dumps (although not as problematic
as if the name were set in an unpredictable way, such as based on times
or database internal state), but seems to be the best way to make
ALTER TABLE DROP FOREIGN KEY usable where a constraint name was not
initially assigned.

Add MySQL syntax for CHANGE COLUMN (which is like MODIFY COLUMN but
also allows renaming the column):
  ALTER TABLE table CHANGE COLUMN old-name column-definition

Add CREATE INDEX (with a syntax which seems compatible with most other
databases I tried):
    CREATE [UNIQUE] INDEX index-name ON table(column[(width)], ...)
As with the MySQL INDEX syntax
    CREATE TABLE(a INTEGER, INDEX(a))
the index is a no-op, but in this case UNIQUE is not a no-op - it
has the same effect as any other unique constraint.  The optional
width is for MySQL compatibility and is also a no-op.

ALTER TABLE can now control the position of the added column,
using the same syntax as MySQL:
  ALTER TABLE ADD COLUMN B INTEGER AFTER A
  ALTER TABLE ADD COLUMN A INTEGER FIRST
  
The dumper can now optionally omit the next value for auto-increment
or identity columns.

Accept the SQL 2003 syntax for an identity column:
    a INTEGER GENERATED BY DEFAULT AS IDENTITY[(STARTS WITH value)]
Support two variants of this functionality:
* An identity column is enabled by the SQL 2003 syntax.  It is based on
a sequence (that is, the value to be inserted by default is not affected
by other insert statements into the table).
* An auto-increment column is enabled by the AUTO_INCREMENT syntax.
It is based on the existing values (that is, inserting another value
into the table will change the value to be inserted).
Older versions of Mayfly had only identity columns.
